--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@capacitor/cli": "^4.8.0",
     "gh-pages": "^5.0.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@capacitor/android": "^4.8.0",
+    "@capacitor/core": "^4.8.0",
     "@solidjs/router": "^0.8.2",
     "solid-js": "^1.6.10"
   }
