--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@capacitor/cli": "^4.8.0",
     "gh-pages": "^5.0.0",
+    "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
